--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,4 @@
 {
-    "name": "Budget Tracker",
-    "short_name": "Budget.io",
-    "theme_color": "#FFFFFF",
-    "background_color": "#FFFFFF",
-    "start_url": "./index.html",
-    "display": "standalone",
     "icons": [
         {
             "src": "/icons/icon-72x72.png",
@@ -46,5 +40,11 @@
             "sizes": "512x512",
             "type": "image/png"
         }
-    ]
+    ],
+    "name": "Budget Tracker",
+    "short_name": "Budget.io",
+    "theme_color": "#FFFFFF",
+    "background_color": "#FFFFFF",
+    "start_url": "./index.html",
+    "display": "standalone"
 }
